task3610 remove